--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-django = "^4.5.2"
 django-stubs = "^1.9.0"
 types-Pillow = "^8.3.11"
 djangorestframework-stubs = "^1.4.0"
+coverage = "^6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
