--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ django-stubs = "^1.9.0"
 types-Pillow = "^8.3.11"
 djangorestframework-stubs = "^1.4.0"
 coverage = "^6.2"
+PyYAML = "^6.0"
+uritemplate = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
