--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["mvickers <vickers.mike@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 wagtail = "^2.15.1"
+pinax-messages = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
