--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r learningplatform/requirements.txt
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
