--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -4,6 +4,8 @@ jobs:
   Push-Workflow:
     runs-on: ubuntu-latest
     steps:
+      - name: Pull down code
+        uses: actions/checkout@master
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -11,7 +13,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r learningplatform/requirements.txt
+          pip install -r requirements.txt
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
