--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
-        run: python manage.py tests
+        run: python manage.py test
