--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.11
 Django==3.2.12
 django-bootstrap-form==3.4
+django-cors-headers==3.11.0
 django-filter==21.1
 django-modelcluster==5.2
 django-taggit==1.5.1
