--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.2.1",
+    "sass-loader": "^13.0.2",
     "typescript": "~4.1.5"
   }
 }
