--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "floating-vue": "^2.0.0-beta.17",
     "register-service-worker": "^1.7.1",
+    "sass": "^1.56.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -31,7 +32,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^7.0.3",
     "prettier": "^2.2.1",
     "sass-loader": "^13.1.0",
     "typescript": "~4.1.5"
