--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest=dist/production",
+    "build-dev": "vue-cli-service build --mode=development --dest=dist/development",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
