--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode=production",
+    "serve-dev": "vue-cli-service serve",
     "build": "vue-cli-service build --dest=dist/production",
     "build-dev": "vue-cli-service build --mode=development --dest=dist/development",
     "lint": "vue-cli-service lint"
